The Dallas or Chicago datacenters can now be explictly selected when using Rackspace cloud files.
---- Changes since 4.03 ----
Access to plugin modules is now granted to resellers.
Updated the Ajaxplorer script installer to 5.0.4 (and renamed to Pydio), TWiki to 6.0.0, Roundcube to 0.9.5, SMF to 2.0.6, SugarCRM to 6.5.16, WordPress to 3.7.1, Django to 1.4.10 and 1.6, MoinMoin to 1.9.7, ZenPhoto to 1.4.5.7, TikiWiki to 11.1 and 6.13, phpMyAdmin to 4.0.9, OwnCloud to 5.0.13, Joomla to 3.2.0, Moodle to 2.6, Zikula to 1.3.6, MediaWiki to 1.19.9 and 1.21.3, phpMyFAQ to 2.8.4, FosWiki to 1.1.19, Drupal to 6.29 and 7.24, Z-push to 2.1.0a-1776, FengOffice to 2.4, PHP-Nuke to 8.3.2, and Dolibarr to 3.4.1.
Renamed the OpenX script to Revive Adserver, to reflect its open-source fork, and bumped the version to 3.0.0.
Added the Mail Rate Limiting page for restricting the rate at which messages will be accepted by the system, either for local delivery or relaying. This can be useful to prevent spammers from using a hijacked account or website to rapidly send large amounts of email.
All incoming email to a domain can now be silently BCCd to another address, similar to the existing option for BCCing outgoing messages.
Added support for migrating domains from DirectAdmin control panel backups.
Errors that would prevent a virtual server from being restored (such as a missing reseller or parent) are now detected before the long restore process starts.
---- Changes since 4.04 ----
Added the fix-domain-permissions API command, for resetting home directory ownership.
Updated the Z-push script installer to version 2.1.1-1788, phpMyAdmin to 4.1.1, MediaWiki to 1.22.0, LimeSurvey to 2.05, Magento to 1.8.1.0, WordPress to 3.8, FengOffice to 2.4.0.6, Revive Adserver to 3.0.1, Django to 1.6.1, Joomla to 3.2.1 and 2.5.17, PiWik to 2.0, and TikiWiki to 12.0.