@@ -1429,3 +1429,4 @@ Errors that would prevent a virtual server from being restored (such as a missin
 ---- Changes since 4.04 ----
 Added the fix-domain-permissions API command, for resetting home directory ownership.
 Updated the Z-push script installer to version 2.1.1-1788, phpMyAdmin to 4.1.1, MediaWiki to 1.22.0, LimeSurvey to 2.05, Magento to 1.8.1.0, WordPress to 3.8, FengOffice to 2.4.0.6, Revive Adserver to 3.0.1, Django to 1.6.1, Joomla to 3.2.1 and 2.5.17, PiWik to 2.0, and TikiWiki to 12.0.
+Added SRV record support to the DNS Records page.
